@@ -107,6 +107,7 @@ plugins:
 - all C template files are now called <plugintype>_xyz.{c,h} instead of <plugintype>_xxx.{c,h}
 - added first version of cons_disjunction.{c,h} which allows a disjunctions of constraints
 - added first version of sepa_closecuts.{c,h} to separate cuts w.r.t. to a point that is closer to the integral polyhedron
+- added reader for variable bounds (reader_bnd.{c,h})
 
 parameters:
 - added parameter <constraints/quadratic/disaggregate> to split a block-separable quadratic constraint into several quadratic constraint
